test/testdata/number/not_indexable_assignment_error.lox
1[0] = 0; // error: 'number' value is not indexable
